--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
 
-        <section id="about" class="about">
+<!--         <section id="about" class="about">
             <div class="container">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
@@ -53,8 +53,24 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
+        <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>As an AI researcher and developer specializing in generative multimodal systems, I combine theoretical expertise with practical implementation. Currently pursuing a Ph.D. in generative AI for data augmentation, I've published innovative research on labeled data augmentation with my paper "Ali-AUG: Innovative Approaches to Labeled Data Augmentation using One-Step Diffusion Model" [arXiv:2410.18678]. I've developed multiple production-ready AI applications and implemented complex architectures from scratch, including a streamlined Stable Diffusion model with 1/3 parameters and a custom GPT-2 implementation. My expertise spans advanced C++ and Qt development, Large Language Models (LLMs), Parameter-Efficient Fine-Tuning (PEFT), and diffusion models, enabling me to bridge the gap between cutting-edge research and practical applications.</p>
+                    <a href="Ali_Hamza_PhD.pdf" class="btn download-cv" download>
+                        <i class="fas fa-download"></i> Download CV
+                    </a>
+                </div>
+                <div class="about-image">
+                    <img src="assets/ali.jpeg" alt="Ali Hamza" width="200" height="200">
+                </div>
+            </div>
+        </div>
+        </section>
         <section id="education" class="education">
             <div class="container">
                 <h2 class="section-title">Education</h2>
